thumbnail badge list formatting (fixes 414)
The problem was that for long titles the meta information
was under the thumbnailbadge and therefore not aligned
with the heading.

I fixed that by wrapping heading and metadata in an additional
div and setting `overflow: hidden` in that div.

--- a/src/adhocracy/static_src/stylesheets/components/_badge.scss
+++ b/src/adhocracy/static_src/stylesheets/components/_badge.scss
@@ -58,4 +58,7 @@
     img {
         margin-right: 5px
     }
+    + div {
+        overflow: hidden;
+    }
 }
